--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.NUMAD23SP_ZhangjinPan"
         tools:targetApi="31">
         <activity
+            android:name=".ClickyActivity"
+            android:label="Clicky Clicky"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
