--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,23 @@
         android:theme="@style/Theme.NUMAD23SP_ZhangjinPan"
         tools:targetApi="31">
         <activity
-            android:name=".ClickyActivity"
-            android:label="Clicky Clicky"
+            android:name=".addWebLinkURL"
             android:exported="false" />
+        <activity
+            android:name=".linkCard"
+            android:exported="false" />
+        <activity
+            android:name=".link_collector"
+            android:exported="false"
+            android:label="Link Collector" />
+        <activity
+            android:name=".about_me"
+            android:exported="false"
+            android:label="About Me" />
+        <activity
+            android:name=".ClickyActivity"
+            android:exported="false"
+            android:label="Clicky Clicky" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
