--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +17,13 @@
         android:theme="@style/Theme.NUMAD23SP_ZhangjinPan"
         tools:targetApi="31">
         <activity
+            android:name=".location"
+            android:exported="false"
+            android:label="Location"  />
+        <activity
             android:name=".prime_directive"
             android:exported="false"
-            android:label="Prime Directive" />
-    <!--        android:configChanges="orientation|keyboardHidden|screenSize//this method also can be use to let the thread running when rotated"-->
+            android:label="Prime Directive" /> <!-- android:configChanges="orientation|keyboardHidden|screenSize//this method also can be use to let the thread running when rotated" -->
         <activity
             android:name=".link_collector"
             android:exported="false"
